@@ -1,7 +1,8 @@
 Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. See README file.
 
-Changelog for sama5d2_utils-0.90 [20190719] [svn: r8]
+Changelog for sama5d2_utils-0.90 [20200502] [svn: r8]
+  - setbits: add '-t' and '-T' options to toggle given gpio
   - test basic functionality of a5d2_pio_status, a5d2_pio_set,
     a5d2_pcm and a5d2_tc_freq
   - change Debian compat level from 7 to 10
